--- a/lib/frontend/templates/index.html
+++ b/lib/frontend/templates/index.html
@@ -4,6 +4,7 @@
       <form action="/hsbk" method="POST" role="form">
          <button style="padding: 20px; font-size: 30px; width: 200px;" type="button" onclick="location.href = '/hsbk';">HSBK</button>
          <button style="padding: 20px; font-size: 30px; width: 200px;" type="button" onclick="location.href = '/rgb';">RGB</button>
+         <button style="padding: 20px; font-size: 30px; width: 200px;" type="button" onclick="location.href = '/experiments';">Experiments</button>
       </form>
    </body>
 </html>
